--- a/index.html
+++ b/index.html
@@ -64,7 +64,12 @@
 				</p>
 
 				<div class="btn-box">
-					<a href="#" type="" class="btn">Download CV</a>
+					<a
+						href="assets/documents//Byron Young Resume.pdf"
+						download="Byron-Young-Resume"
+						class="btn"
+						>Download CV</a
+					>
 					<a href="#contact" class="btn">Let's Talk</a>
 					<span class="animate" style="--i: 5"></span>
 				</div>
@@ -82,13 +87,22 @@
 			</div>
 
 			<div class="home-socials">
-				<a href="https://bit.ly/3SXCMej"
+				<a
+					href="https://bit.ly/3SXCMej"
+					target="_blank"
+					rel="noopener noreferrer"
 					><i class="bx bxl-linkedin"></i
 				></a>
-				<a href="https://github.com/devByByron"
+				<a
+					href="https://github.com/devByByron"
+					target="_blank"
+					rel="noopener noreferrer"
 					><i class="bx bxl-github"></i
 				></a>
-				<a href="https://shorturl.at/Rz4i6"
+				<a
+					href="https://shorturl.at/Rz4i6"
+					target="_blank"
+					rel="noopener noreferrer"
 					><i class="bx bxl-whatsapp"></i
 				></a>
 
@@ -132,7 +146,12 @@
 				</p>
 
 				<div class="btn-box btns">
-					<a href="#" class="btn">Read More</a>
+					<a
+						href="assets/documents//Byron Young Resume.pdf"
+						download="Byron-Young-Resume"
+						class="btn"
+						>Download CV</a
+					>
 					<span class="animate scroll" style="--i: 5"></span>
 				</div>
 			</div>
