--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
 						<h4>Loruki Landing Page</h4>
 						<p>Landing page created using HTML and CSS</p>
 						<a
-							href="https://loruki-hqtjz2shf-byrons-projects-e78a3328.vercel.app/"
+							href="https://lorukiv2.netlify.app/"
 							target="_blank"
 							rel="noopener noreferrer"
 							><i class="bx bx-link-external"></i
@@ -456,7 +456,10 @@
 					<div class="portfolio-layer">
 						<h4>Product Preview Card</h4>
 						<p>Product card created using HTML and CSS</p>
-						<a href="https://productpreviewcardweb.netlify.app/"
+						<a
+							href="https://productpreviewcardweb.netlify.app/"
+							target="_blank"
+							rel="noopener noreferrer"
 							><i class="bx bx-link-external"></i
 						></a>
 					</div>
@@ -472,7 +475,10 @@
 					<div class="portfolio-layer">
 						<h4>To-Do List Web App</h4>
 						<p>To do list app using ReactJS framework</p>
-						<a href="https://to-do-list-app-blush-seven.vercel.app/"
+						<a
+							href="https://to-do-list-app-blush-seven.vercel.app/"
+							target="_blank"
+							rel="noopener noreferrer"
 							><i class="bx bx-link-external"></i
 						></a>
 					</div>
