--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 					Junior developer with two years' experience in a software
 					development environment. I have completed my diploma in
 					Information & Communication Technology at Cape Peninsula
-					University of Technology. I am an gooo communicator, problem
+					University of Technology. I am an good communicator, problem
 					solver, and team player. My career objective is to become a
 					Full Stack Developer, as I am constantly seeking
 					opportunities to learn new technologies to improve my
