--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 							</div>
 
 							<div class="progress">
-								<h3>React JS <span>40%</span></h3>
+								<h3>React JS <span>50%</span></h3>
 								<div class="bar"><span></span></div>
 							</div>
 							<div class="progress">
@@ -412,6 +412,27 @@
 				<span class="animate scroll" style="--i: 1"></span>
 			</h2>
 			<div class="portfolio-container">
+				<div class="portfolio-box">
+					<img src="./assets/images/mern-project.png" alt="" />
+					<div class="portfolio-layer">
+						<h4>Full Stack Web App</h4>
+						<p>
+							Mern stack application combines Express.js and
+							Node.js for a scalable backend, MongoDB and Mongoose
+							for organized data management, and React.js for the
+							UI
+						</p>
+						<a
+							href="https://mern-stack-application-6szp.onrender.com/"
+							target="_blank"
+							rel="noopener noreferrer"
+						>
+							<i class="bx bx-link-external"></i>
+						</a>
+					</div>
+
+					<span class="animate scroll" style="--i: 2"></span>
+				</div>
 				<div class="portfolio-box">
 					<img
 						src="./assets/images/color-picker-project-img.png"
