--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 				<div class="btn-box">
 					<a
-						href="assets/documents//Byron Young Resume.pdf"
+						href="assets/documents//Byron Young Resume Latest.pdf"
 						download="Byron-Young-Resume"
 						class="btn"
 						>Download CV</a
@@ -147,7 +147,7 @@
 
 				<div class="btn-box btns">
 					<a
-						href="assets/documents//Byron Young Resume.pdf"
+						href="assets/documents//Byron Young Resume Latest.pdf"
 						download="Byron-Young-Resume"
 						class="btn"
 						>Download CV</a
@@ -340,7 +340,7 @@
 							</div>
 
 							<div class="progress">
-								<h3>Node JS <span>65%</span></h3>
+								<h3>Node JS <span>60%</span></h3>
 								<div class="bar"><span></span></div>
 							</div>
 
