--- a/index.html
+++ b/index.html
@@ -208,11 +208,12 @@
 									<i class="bx bxs-calendar"></i>2008 - 2012
 								</div>
 
-								<h3>Matric Certificate - High School</h3>
+								<h3>
+									National Senior Certificate - High School
+								</h3>
 								<p>
-									Completed my matric certificate at Princeton
-									High School At the University of the Western
-									Cape
+									Completed my national senior certificate at
+									Princeton High School.
 								</p>
 							</div>
 						</div>
@@ -254,7 +255,7 @@
 						<div class="education-content">
 							<div class="content">
 								<div class="year">
-									<i class="bx bxs-calendar"></i>2019 - 2018
+									<i class="bx bxs-calendar"></i>2018 - 2019
 								</div>
 
 								<h3>
