--- a/index.html
+++ b/index.html
@@ -246,8 +246,8 @@
 									Virtual Machine request application
 									prototype, enhancing my technical skills in
 									web and software development. I also took
-									the initiative to upskill by completing
-									various online courses.
+									the initiative to upskill myself by
+									completing various online courses.
 								</p>
 							</div>
 						</div>
