--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 					<span class="animate" style="--i: 3"></span>
 				</div>
 				<p>
-					Junior Developer with 2 Years of Experience in Software
-					Development. I specialize in building responsive,
+					Junior Software Developer with 2 Years of Experience in
+					Software Development. I specialize in building responsive,
 					user-friendly websites using modern web technologies. With
 					hands-on experience in HTML, CSS, and JavaScript.
 					<span class="animate" style="--i: 4"></span>
@@ -65,7 +65,7 @@
 
 				<div class="btn-box">
 					<a
-						href="assets/documents//Byron Young Resume Latest.pdf"
+						href="assets/documents//Byron-Young-Resume-v3.pdf"
 						download="Byron-Young-Resume"
 						class="btn"
 						>Download CV</a
@@ -126,28 +126,28 @@
 
 			<div class="about-content">
 				<h3>
-					Junior Developer<span
+					Junior Software Developer<span
 						class="animate scroll"
 						style="--i: 3"
 					></span>
 				</h3>
 
 				<p>
-					Junior developer with two years' experience in a software
-					development environment. I have completed my diploma in
-					Information & Communication Technology at Cape Peninsula
-					University of Technology. I am an good communicator, problem
-					solver, and team player. My career objective is to become a
-					Full Stack Developer, as I am constantly seeking
-					opportunities to learn new technologies to improve my
-					skills. I am excited to bring my skills and passion to a new
-					role in the field of software development.
+					Junior software developer with two years' experience in a
+					software development environment. I have completed my
+					diploma in Information & Communication Technology at Cape
+					Peninsula University of Technology. I am an good
+					communicator, problem solver, and team player. My career
+					objective is to become a Full Stack Developer, as I am
+					constantly seeking opportunities to learn new technologies
+					to improve my skills. I am excited to bring my skills and
+					passion to a new role in the field of software development.
 					<span class="animate scroll" style="--i: 4"></span>
 				</p>
 
 				<div class="btn-box btns">
 					<a
-						href="assets/documents//Byron Young Resume Latest.pdf"
+						href="assets/documents//Byron-Young-Resume-v3.pdf"
 						download="Byron-Young-Resume"
 						class="btn"
 						>Download CV</a
@@ -322,26 +322,21 @@
 							</div>
 
 							<div class="progress">
-								<h3>CSS <span>70%</span></h3>
+								<h3>CSS / Bootstrap <span>75%</span></h3>
 								<div class="bar"><span></span></div>
 							</div>
 
 							<div class="progress">
-								<h3>JavaScript <span>65%</span></h3>
+								<h3>JavaScript <span>70%</span></h3>
+								<div class="bar"><span></span></div>
+							</div>
+							<div class="progress">
+								<h3>Wordpress <span>50%</span></h3>
 								<div class="bar"><span></span></div>
 							</div>
 
 							<div class="progress">
-								<h3>React JS <span>50%</span></h3>
-								<div class="bar"><span></span></div>
-							</div>
-							<div class="progress">
-								<h3>Express JS <span>60%</span></h3>
-								<div class="bar"><span></span></div>
-							</div>
-
-							<div class="progress">
-								<h3>Node JS <span>60%</span></h3>
+								<h3>C# <span>50%</span></h3>
 								<div class="bar"><span></span></div>
 							</div>
 
@@ -515,84 +510,36 @@
 				<span class="animate scroll" style="--i: 1"></span>
 			</h2>
 
-			<form action="#">
-				<div class="input-box">
-					<div class="input-field field">
-						<input
-							type="text"
-							class="item"
-							id="name"
-							placeholder="Full Name"
-							autocomplete="off"
-						/>
-
-						<span class="focus"></span>
-						<div class="error-txt">Name can't be blank</div>
-					</div>
-
-					<div class="input-field field">
-						<input
-							type="text"
-							class="item"
-							id="email"
-							placeholder="Email Address"
-						/>
-						<span class="focus"></span>
-						<div class="error-txt email">
-							Email address can't be blank
-						</div>
-					</div>
+			<div class="contact-container">
+				<div class="contact-img">
+					<i class="bx bxs-phone"></i>
 					<span class="animate scroll" style="--i: 2"></span>
 				</div>
 
-				<div class="input-box">
-					<div class="input-field field">
-						<input
-							type="number"
-							class="item"
-							id="phone"
-							placeholder="Mobile Number"
-							autocomplete="off"
-						/>
-						<span class="focus"></span>
-						<div class="error-txt">Phone number can't be blank</div>
+				<div class="contact-details">
+					<h3 class="title">Let's <span>Connect</span></h3>
+
+					<p>
+						Feel free to reach out to me for any inquiries or
+						collaborations. I am always open to new opportunities
+						and projects.
+					</p>
+
+					<div class="contact-box">
+						<div class="contact-info">
+							<div class="details">
+								<a href="mailto:youngbk0308@gmail.com"
+									><span>Email:</span>
+									youngbk0308@gmail.com</a
+								>
+								<a href="#"
+									><span>Cellphone No:</span> 0728726668</a
+								>
+							</div>
+						</div>
 					</div>
-
-					<div class="input-field field">
-						<input
-							type="text"
-							class="item"
-							id="subject"
-							placeholder="Email Subject"
-							autocomplete="off"
-						/>
-						<span class="focus"></span>
-						<div class="error-txt">Subject can't be blank</div>
-					</div>
-					<span class="animate scroll" style="--i: 3"></span>
 				</div>
-
-				<div class="textarea-field field">
-					<textarea
-						class="item"
-						name=""
-						id="message"
-						cols="30"
-						rows="10"
-						placeholder="Your Message"
-						autocomplete="off"
-					></textarea>
-
-					<span class="focus"></span>
-					<div class="error-txt">Message can't be blank</div>
-					<span class="animate scroll" style="--i: 4"></span>
-				</div>
-
-				<div class="btn-box btns">
-					<button type="submit" class="btn">Submit</button>
-					<span class="animate scroll" style="--i: 5"></span>
-				</div>
-			</form>
+			</div>
 		</section>
 
 		<footer class="footer">
@@ -601,16 +548,15 @@
 					Copyright &copy; 2024 by Byron Young | All Rights Reserved
 				</p>
 
-				<span class="animate scroll" style="--i: 1"></span>
+				<span class=""></span>
 			</div>
 
 			<div class="footer-iconTop">
 				<a href="#"><i class="bx bx-up-arrow-alt"></i></a>
-				<span class="animate scroll" style="--i: 2"></span>
+				<span class=""></span>
 			</div>
 		</footer>
-		<script src="https://smtpjs.com/v3/smtp.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 		<script src="js/script.js"></script>
 	</body>
 </html>
