--- a/index.html
+++ b/index.html
@@ -409,17 +409,18 @@
 			</h2>
 			<div class="portfolio-container">
 				<div class="portfolio-box">
-					<img src="./assets/images/mern-project.png" alt="" />
+					<img
+						src="./assets/images/super-hero-api-app-img.png"
+						alt=""
+					/>
 					<div class="portfolio-layer">
-						<h4>Full Stack Web App</h4>
+						<h4>Super Hero Web Application</h4>
 						<p>
-							Mern stack application combines Express.js and
-							Node.js for a scalable backend, MongoDB and Mongoose
-							for organized data management, and React.js for the
-							UI
+							A web application that retrieves and displays data
+							from the Superhero API using JavaScript.
 						</p>
 						<a
-							href="https://mern-stack-application-6szp.onrender.com/"
+							href="https://super-hero-app-v1.netlify.app/"
 							target="_blank"
 							rel="noopener noreferrer"
 						>
@@ -484,16 +485,19 @@
 				</div>
 				<div class="portfolio-box">
 					<img
-						src="./assets/images/to-do-list-app.png"
+						src="./assets/images/JS-Rock-Paper-Scissors-Game-img.png"
 						alt=""
 						target="_blank"
 						rel="noopener noreferrer"
 					/>
 					<div class="portfolio-layer">
-						<h4>To-Do List Web App</h4>
-						<p>To do list app using ReactJS framework</p>
+						<h4>Rock Paper Scissors Web App</h4>
+						<p>
+							Rock, paper, scissors game web application using
+							HTML, CSS and JavaScript
+						</p>
 						<a
-							href="https://to-do-list-app-blush-seven.vercel.app/"
+							href="https://rpsgameappv1.netlify.app/"
 							target="_blank"
 							rel="noopener noreferrer"
 							><i class="bx bx-link-external"></i
