--- a/index.html
+++ b/index.html
@@ -410,6 +410,34 @@
 			<div class="portfolio-container">
 				<div class="portfolio-box">
 					<img
+						src="./assets/images/good-eats-restuarant-img.png"
+						alt=""
+					/>
+					<div class="portfolio-layer">
+						<h4>
+							Good Eats Restaurant ASP.NET MVC Web Application
+						</h4>
+						<p>
+							Developed a restaurant ordering web application
+							using ASP.NET MVC, Razor Pages, and Microsoft SQL
+							Server. Implemented ASP.NET Identity for secure
+							authentication and role-based authorization.
+							Deployed on Microsoft Azure with Azure App Services
+							and Azure SQL Database.
+						</p>
+						<a
+							href="https://goodeatsrestaurant.azurewebsites.net/"
+							target="_blank"
+							rel="noopener noreferrer"
+						>
+							<i class="bx bx-link-external"></i>
+						</a>
+					</div>
+
+					<span class="animate scroll" style="--i: 2"></span>
+				</div>
+				<div class="portfolio-box">
+					<img
 						src="./assets/images/super-hero-api-app-img.png"
 						alt=""
 					/>
