--- a/index.html
+++ b/index.html
@@ -414,9 +414,7 @@
 						alt=""
 					/>
 					<div class="portfolio-layer">
-						<h4>
-							Good Eats Restaurant ASP.NET MVC Web Application
-						</h4>
+						<h4>Good Eats ASP.NET MVC Web Application</h4>
 						<p>
 							Developed a restaurant ordering web application
 							using ASP.NET MVC, Razor Pages, and Microsoft SQL
