14th Commit - Changed project description

--- a/index.html
+++ b/index.html
@@ -417,11 +417,9 @@
 						<h4>Good Eats ASP.NET MVC Web Application</h4>
 						<p>
 							Developed a restaurant ordering web application
-							using ASP.NET MVC, Razor Pages, and Microsoft SQL
-							Server. Implemented ASP.NET Identity for secure
-							authentication and role-based authorization.
-							Deployed on Microsoft Azure with Azure App Services
-							and Azure SQL Database.
+							using ASP.NET MVC, Razor Pages, Microsoft SQL
+							Server, ASP.NET Identity, Microsoft Azure with Azure
+							App Services and Azure SQL Database
 						</p>
 						<a
 							href="https://goodeatsrestaurant.azurewebsites.net/"
