--- a/index.html
+++ b/index.html
@@ -535,13 +535,13 @@
 		<section class="contact" id="contact">
 			<h2 class="heading">
 				Contact <span>Me</span>
-				<span class="animate scroll" style="--i: 1"></span>
+				<!-- <span class="animate scroll" style="--i: 1"></span> -->
 			</h2>
 
 			<div class="contact-container">
 				<div class="contact-img">
 					<i class="bx bxs-phone"></i>
-					<span class="animate scroll" style="--i: 2"></span>
+					<!-- <span class="animate scroll" style="--i: 2"></span> -->
 				</div>
 
 				<div class="contact-details">
