--- a/index.html
+++ b/index.html
@@ -331,12 +331,12 @@
 								<div class="bar"><span></span></div>
 							</div>
 							<div class="progress">
-								<h3>Wordpress <span>50%</span></h3>
+								<h3>.NET <span>70%</span></h3>
 								<div class="bar"><span></span></div>
 							</div>
 
 							<div class="progress">
-								<h3>C# <span>50%</span></h3>
+								<h3>C# <span>70%</span></h3>
 								<div class="bar"><span></span></div>
 							</div>
 
@@ -533,24 +533,19 @@
 		</section>
 
 		<section class="contact" id="contact">
-			<h2 class="heading">
-				Contact <span>Me</span>
-				<!-- <span class="animate scroll" style="--i: 1"></span> -->
-			</h2>
+			<h2 class="heading">Contact <span>Me</span></h2>
 
 			<div class="contact-container">
 				<div class="contact-img">
 					<i class="bx bxs-phone"></i>
-					<!-- <span class="animate scroll" style="--i: 2"></span> -->
 				</div>
 
 				<div class="contact-details">
 					<h3 class="title">Let's <span>Connect</span></h3>
 
 					<p>
-						Feel free to reach out to me for any inquiries or
-						collaborations. I am always open to new opportunities
-						and projects.
+						Feel free to reach out to me for any inquiries. I am
+						always open to new opportunities.
 					</p>
 
 					<div class="contact-box">
@@ -573,7 +568,7 @@
 		<footer class="footer">
 			<div class="footer-text">
 				<p>
-					Copyright &copy; 2024 by Byron Young | All Rights Reserved
+					Copyright &copy; 2025 by Byron Young | All Rights Reserved
 				</p>
 
 				<span class=""></span>
