--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 							</div>
 
 							<div class="progress">
-								<h3>CSS / Bootstrap <span>75%</span></h3>
+								<h3>CSS <span>75%</span></h3>
 								<div class="bar"><span></span></div>
 							</div>
 
@@ -337,6 +337,11 @@
 
 							<div class="progress">
 								<h3>C# <span>70%</span></h3>
+								<div class="bar"><span></span></div>
+							</div>
+
+							<div class="progress">
+								<h3>Wordpress <span>65%</span></h3>
 								<div class="bar"><span></span></div>
 							</div>
 
