22 Commit - Add wordpress website to portfolio

--- a/index.html
+++ b/index.html
@@ -460,15 +460,12 @@
 					<span class="animate scroll" style="--i: 2"></span>
 				</div>
 				<div class="portfolio-box">
-					<img
-						src="./assets/images/color-picker-project-img.png"
-						alt=""
-					/>
+					<img src="./assets/images/ic-security-img.png" alt="" />
 					<div class="portfolio-layer">
-						<h4>Color Generator Web App</h4>
-						<p>Hex and rgba color generator web application</p>
+						<h4>IronClad Security Wordpress Website</h4>
+						<p>Created a website using wordpress CMS</p>
 						<a
-							href="https://colorgeneratorappv2.netlify.app/"
+							href="https://www.icsecurity.youngsdigitalinnovations.co.za/"
 							target="_blank"
 							rel="noopener noreferrer"
 						>
