23 Commit - Updated project link

--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
 						<h4>IronClad Security Wordpress Website</h4>
 						<p>Created a website using wordpress CMS</p>
 						<a
-							href="https://www.icsecurity.youngsdigitalinnovations.co.za/"
+							href="https://www.icsecurity.youngswebinnovations.co.za/"
 							target="_blank"
 							rel="noopener noreferrer"
 						>
