24 Commit - Added updated resume

--- a/index.html
+++ b/index.html
@@ -237,17 +237,18 @@
 								</div>
 
 								<h3>
-									Intern Developer - Cape Peninsula University
-									of Technology Internship
+									WIL Student - Cape Peninsula University of
+									Technology
 								</h3>
 								<p>
-									During my internship at Cape Peninsula
-									University of Technology, I developed a
-									Virtual Machine request application
-									prototype, enhancing my technical skills in
-									web and software development. I also took
-									the initiative to upskill myself by
-									completing various online courses.
+									During my work intergrated learning at Cape
+									Peninsula University of Technology, I
+									developed a Virtual Machine request
+									application prototype, enhancing my
+									technical skills in web and software
+									development. I also took the initiative to
+									upskill myself by completing various online
+									courses.
 								</p>
 							</div>
 						</div>
