26 Commit - Replace project and updated resume

--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
 			</h2>
 			<div class="portfolio-container">
 				<div class="portfolio-box">
-					<img
+					<!-- <img
 						src="./assets/images/good-eats-restuarant-img.png"
 						alt=""
 					/>
@@ -436,7 +436,7 @@
 						</a>
 					</div>
 
-					<span class="animate scroll" style="--i: 2"></span>
+					<span class="animate scroll" style="--i: 2"></span> -->
 				</div>
 				<div class="portfolio-box">
 					<img
