--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 			<nav class="navbar">
 				<a href="#home" class="active">Home</a>
 				<a href="#about">About</a>
+				<a href="#education">Education</a>
 				<a href="#skills">Skills</a>
 				<a href="#portfolio">Portfolio</a>
 				<a href="#contact">Contact</a>
@@ -55,14 +56,20 @@
 					<span class="animate" style="--i: 3"></span>
 				</div>
 				<p>
-					Web Developer with 2 Years of Experience in Software
-					Development. I specialize in building responsive,
+					Junior Software Developer with 2 Years of Experience in
+					Software Development. I specialize in building responsive,
 					user-friendly websites using modern web technologies. With
 					hands-on experience in HTML, CSS, and JavaScript.
 					<span class="animate" style="--i: 4"></span>
 				</p>
 
 				<div class="btn-box">
+					<a
+						href="assets/documents//Byron-Young-Resume-v3.pdf"
+						download="Byron-Young-Resume"
+						class="btn"
+						>Download CV</a
+					>
 					<a href="#contact" class="btn">Let's Talk</a>
 					<span class="animate" style="--i: 5"></span>
 				</div>
@@ -119,14 +126,14 @@
 
 			<div class="about-content">
 				<h3>
-					Web Developer<span
+					Junior Software Developer<span
 						class="animate scroll"
 						style="--i: 3"
 					></span>
 				</h3>
 
 				<p>
-					<span>Web Developer</span> with two years' experience in a
+					Junior software developer with two years' experience in a
 					software development environment. I have completed my
 					diploma in Information & Communication Technology at Cape
 					Peninsula University of Technology. I am an good
@@ -143,9 +150,152 @@
 						href="assets/documents//Byron-Young-Resume-v3.pdf"
 						download="Byron-Young-Resume"
 						class="btn"
-						>Lets Talks</a
+						>Download CV</a
 					>
 					<span class="animate scroll" style="--i: 5"></span>
+				</div>
+			</div>
+		</section>
+
+		<section class="education" id="education">
+			<h2 class="heading">
+				My <span>Journey</span>
+				<span class="animate scroll" style="--i: 1"></span>
+			</h2>
+
+			<div class="education-row">
+				<div class="education-column">
+					<h3 class="title">
+						Education<span
+							class="animate scroll"
+							style="--i: 2"
+						></span>
+					</h3>
+
+					<div class="education-box">
+						<div class="education-content">
+							<div class="content">
+								<div class="year">
+									<i class="bx bxs-calendar"></i>2021 - 2023
+								</div>
+
+								<h3>Diploma - University</h3>
+								<p>
+									Completed my diploma in Information &
+									Communication Technology(ICT) at Cape
+									Peninsula University of Technology
+								</p>
+							</div>
+						</div>
+
+						<div class="education-content">
+							<div class="content">
+								<div class="year">
+									<i class="bx bxs-calendar"></i>2020 - 2020
+								</div>
+
+								<h3>Higher Certificate - University</h3>
+								<p>
+									Completed my higher certificate in
+									Information & Communication Technology(ICT)
+									at Cape Peninsula University of Technology
+								</p>
+							</div>
+						</div>
+						<div class="education-content">
+							<div class="content">
+								<div class="year">
+									<i class="bx bxs-calendar"></i>2008 - 2012
+								</div>
+
+								<h3>
+									National Senior Certificate - High School
+								</h3>
+								<p>
+									Completed my national senior certificate at
+									Princeton High School.
+								</p>
+							</div>
+						</div>
+						<span class="animate scroll" style="--i: 3"></span>
+					</div>
+				</div>
+
+				<div class="education-column">
+					<h3 class="title">
+						Experience<span
+							class="animate scroll"
+							style="--i: 4"
+						></span>
+					</h3>
+
+					<div class="education-box">
+						<div class="education-content">
+							<div class="content">
+								<div class="year">
+									<i class="bx bxs-calendar"></i>2023 - 2023
+								</div>
+
+								<h3>
+									WIL Student - Cape Peninsula University of
+									Technology
+								</h3>
+								<p>
+									During my work intergrated learning at Cape
+									Peninsula University of Technology, I
+									developed a Virtual Machine request
+									application prototype, enhancing my
+									technical skills in web and software
+									development. I also took the initiative to
+									upskill myself by completing various online
+									courses.
+								</p>
+							</div>
+						</div>
+
+						<div class="education-content">
+							<div class="content">
+								<div class="year">
+									<i class="bx bxs-calendar"></i>2018 - 2019
+								</div>
+
+								<h3>
+									Intern Developer - University of Western
+									Cape Internship
+								</h3>
+								<p>
+									I had the opportunity to collaborate with a
+									senior developer on an application project
+									utilizing SSIS (SQL Server Integration
+									Services). My responsibilities included
+									editing and refining project documentation
+									for clarity and accuracy, as well as working
+									in a team environment.
+								</p>
+							</div>
+						</div>
+
+						<div class="education-content">
+							<div class="content">
+								<div class="year">
+									<i class="bx bxs-calendar"></i>2017 - 2017
+								</div>
+
+								<h3>Web Developer - Web 2 Web Internship</h3>
+								<p>
+									During my internship at Web 2 Web, I focused
+									on creating and optimizing web pages for
+									clients, ensuring their websites aligned
+									with their business objectives. I
+									contributed to improving clients' online
+									presence by implementing SEO best practices,
+									enhancing site visibility and user
+									engagement.
+								</p>
+							</div>
+						</div>
+						<span class="animate scroll" style="--i: 5"></span>
+					</div>
 				</div>
 			</div>
 		</section>
@@ -173,7 +323,7 @@
 							</div>
 
 							<div class="progress">
-								<h3>CSS <span>80%</span></h3>
+								<h3>CSS <span>75%</span></h3>
 								<div class="bar"><span></span></div>
 							</div>
 
@@ -181,9 +331,23 @@
 								<h3>JavaScript <span>70%</span></h3>
 								<div class="bar"><span></span></div>
 							</div>
+							<div class="progress">
+								<h3>.NET <span>60%</span></h3>
+								<div class="bar"><span></span></div>
+							</div>
 
 							<div class="progress">
-								<h3>Wordpress <span>75%</span></h3>
+								<h3>C# <span>70%</span></h3>
+								<div class="bar"><span></span></div>
+							</div>
+
+							<div class="progress">
+								<h3>Wordpress <span>65%</span></h3>
+								<div class="bar"><span></span></div>
+							</div>
+
+							<div class="progress">
+								<h3>Git <span>75%</span></h3>
 								<div class="bar"><span></span></div>
 							</div>
 						</div>
@@ -203,22 +367,37 @@
 					<div class="skills-box">
 						<div class="skills-content">
 							<div class="progress">
-								<h3>Communication <span>85%</span></h3>
+								<h3>Communication <span>80%</span></h3>
 								<div class="bar"><span></span></div>
 							</div>
 
 							<div class="progress">
-								<h3>Problem Solving<span>80%</span></h3>
+								<h3>Problem Solving<span>75%</span></h3>
 								<div class="bar"><span></span></div>
 							</div>
 
 							<div class="progress">
-								<h3>Adaptability <span>85%</span></h3>
+								<h3>Teamwork <span>85%</span></h3>
 								<div class="bar"><span></span></div>
 							</div>
 
 							<div class="progress">
-								<h3>Time Management <span>80%</span></h3>
+								<h3>Adaptability <span>75%</span></h3>
+								<div class="bar"><span></span></div>
+							</div>
+
+							<div class="progress">
+								<h3>Time Management <span>65%</span></h3>
+								<div class="bar"><span></span></div>
+							</div>
+
+							<div class="progress">
+								<h3>Computer Literacy <span>85%</span></h3>
+								<div class="bar"><span></span></div>
+							</div>
+
+							<div class="progress">
+								<h3>Decision Making <span>70%</span></h3>
 								<div class="bar"><span></span></div>
 							</div>
 						</div>
@@ -255,7 +434,7 @@
 						>
 							<i class="bx bx-link-external"></i>
 						</a>
-					</div> -->
+					</div>
 
 					<span class="animate scroll" style="--i: 2"></span> -->
 				</div>
