Latest Commit - Added new projects

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					Junior Software Developer with 2 Years of Experience in
 					Software Development. I specialize in building responsive,
 					user-friendly websites using modern web technologies. With
-					hands-on experience in HTML, CSS, and JavaScript.
+					hands-on experience in HTML, CSS, WordPress and JavaScript.
 					<span class="animate" style="--i: 4"></span>
 				</p>
 
@@ -133,7 +133,7 @@
 				</h3>
 
 				<p>
-					Junior software developer with two years' experience in a
+					Junior Software Developer with two years' experience in a
 					software development environment. I have completed my
 					diploma in Information & Communication Technology at Cape
 					Peninsula University of Technology. I am an good
@@ -309,7 +309,7 @@
 			<div class="skills-row">
 				<div class="skills-column">
 					<h3 class="title">
-						Tech Stacks<span
+						Technical Skills<span
 							class="animate scroll"
 							style="--i: 2"
 						></span>
@@ -332,17 +332,12 @@
 								<div class="bar"><span></span></div>
 							</div>
 							<div class="progress">
-								<h3>.NET <span>60%</span></h3>
+								<h3>Angular <span>50%</span></h3>
 								<div class="bar"><span></span></div>
 							</div>
 
 							<div class="progress">
-								<h3>C# <span>70%</span></h3>
-								<div class="bar"><span></span></div>
-							</div>
-
-							<div class="progress">
-								<h3>Wordpress <span>65%</span></h3>
+								<h3>Wordpress <span>80%</span></h3>
 								<div class="bar"><span></span></div>
 							</div>
 
@@ -387,7 +382,7 @@
 							</div>
 
 							<div class="progress">
-								<h3>Time Management <span>65%</span></h3>
+								<h3>Time Management <span>70%</span></h3>
 								<div class="bar"><span></span></div>
 							</div>
 
@@ -415,6 +410,66 @@
 			</h2>
 			<div class="portfolio-container">
 				<div class="portfolio-box">
+					<img src="./assets/images/seo-legacy-img.png" alt="" />
+					<div class="portfolio-layer">
+						<h4>SEO Legacy Wordpress Website</h4>
+						<p>
+							Developed a responsive website using wordpress CMS
+							and Elementor page builder
+						</p>
+						<a
+							href="http://www.seo-legacy.co.za/"
+							target="_blank"
+							rel="noopener noreferrer"
+						>
+							<i class="bx bx-link-external"></i>
+						</a>
+					</div>
+
+					<span class="animate scroll" style="--i: 2"></span>
+				</div>
+
+				<div class="portfolio-box">
+					<img
+						src="./assets/images/ignition-worx-project.png"
+						alt=""
+					/>
+					<div class="portfolio-layer">
+						<h4>Ignition Worx Wordpress Website</h4>
+						<p>
+							Developed a responsive website using wordpress CMS
+							and Elementor page builder
+						</p>
+						<a
+							href="https://www.ignitionworx.seo-legacy.co.za/"
+							target="_blank"
+							rel="noopener noreferrer"
+						>
+							<i class="bx bx-link-external"></i>
+						</a>
+					</div>
+
+					<span class="animate scroll" style="--i: 2"></span>
+				</div>
+
+				<div class="portfolio-box">
+					<img src="./assets/images/ic-security-img.png" alt="" />
+					<div class="portfolio-layer">
+						<h4>IronClad Security Wordpress Website</h4>
+						<p>Created a website using wordpress CMS</p>
+						<a
+							href="https://www.icsecurity.seo-legacy.co.za/"
+							target="_blank"
+							rel="noopener noreferrer"
+						>
+							<i class="bx bx-link-external"></i>
+						</a>
+					</div>
+
+					<span class="animate scroll" style="--i: 2"></span>
+				</div>
+
+				<div class="portfolio-box">
 					<img
 						src="./assets/images/super-hero-api-app-img.png"
 						alt=""
@@ -427,22 +482,6 @@
 						</p>
 						<a
 							href="https://super-hero-app-v1.netlify.app/"
-							target="_blank"
-							rel="noopener noreferrer"
-						>
-							<i class="bx bx-link-external"></i>
-						</a>
-					</div>
-
-					<span class="animate scroll" style="--i: 2"></span>
-				</div>
-				<div class="portfolio-box">
-					<img src="./assets/images/ic-security-img.png" alt="" />
-					<div class="portfolio-layer">
-						<h4>IronClad Security Wordpress Website</h4>
-						<p>Created a website using wordpress CMS</p>
-						<a
-							href="https://www.icsecurity.youngswebinnovations.co.za/"
 							target="_blank"
 							rel="noopener noreferrer"
 						>
