--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 					<span class="animate" style="--i: 3"></span>
 				</div>
 				<p>
-					Junior Software Developer with 2 Years of Experience in
-					Software Development. I specialize in building responsive,
+					Software Developer with 2 Years of Experience in Software
+					Development. I specialize in building responsive,
 					user-friendly websites using modern web technologies. With
 					hands-on experience in HTML, CSS, WordPress and JavaScript.
 					<span class="animate" style="--i: 4"></span>
@@ -126,22 +126,22 @@
 
 			<div class="about-content">
 				<h3>
-					Junior Software Developer<span
+					Software Developer<span
 						class="animate scroll"
 						style="--i: 3"
 					></span>
 				</h3>
 
 				<p>
-					Junior Software Developer with two years' experience in a
-					software development environment. I have completed my
-					diploma in Information & Communication Technology at Cape
-					Peninsula University of Technology. I am an good
-					communicator, problem solver, and team player. My career
-					objective is to become a Full Stack Developer, as I am
-					constantly seeking opportunities to learn new technologies
-					to improve my skills. I am excited to bring my skills and
-					passion to a new role in the field of software development.
+					Software Developer with two years' experience in a software
+					development environment. I have completed my diploma in
+					Information & Communication Technology at Cape Peninsula
+					University of Technology. I am an good communicator, problem
+					solver, and team player. My career objective is to become a
+					Full Stack Developer, as I am constantly seeking
+					opportunities to learn new technologies to improve my
+					skills. I am excited to bring my skills and passion to a new
+					role in the field of software development.
 					<span class="animate scroll" style="--i: 4"></span>
 				</p>
 
