--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 				<div class="btn-box">
 					<a
-						href="assets/documents//Resume-of-Byron-Young.pdf"
+						href="assets/documents//Byron-Young-Resume-v3.pdf"
 						download="Byron-Young-Resume"
 						class="btn"
 						>Download CV</a
@@ -147,7 +147,7 @@
 
 				<div class="btn-box btns">
 					<a
-						href="assets/documents//Resume-of-Byron-Young.pdf"
+						href="assets/documents//Byron-Young-Resume-v3.pdf"
 						download="Byron-Young-Resume"
 						class="btn"
 						>Download CV</a
@@ -410,66 +410,6 @@
 			</h2>
 			<div class="portfolio-container">
 				<div class="portfolio-box">
-					<img src="./assets/images/seo-legacy-img.png" alt="" />
-					<div class="portfolio-layer">
-						<h4>SEO Legacy Wordpress Website</h4>
-						<p>
-							Developed a responsive website using wordpress CMS
-							and Elementor page builder
-						</p>
-						<a
-							href="http://www.seo-legacy.co.za/"
-							target="_blank"
-							rel="noopener noreferrer"
-						>
-							<i class="bx bx-link-external"></i>
-						</a>
-					</div>
-
-					<span class="animate scroll" style="--i: 2"></span>
-				</div>
-
-				<div class="portfolio-box">
-					<img
-						src="./assets/images/ignition-worx-project.png"
-						alt=""
-					/>
-					<div class="portfolio-layer">
-						<h4>Ignition Worx Wordpress Website</h4>
-						<p>
-							Developed a responsive website using wordpress CMS
-							and Elementor page builder
-						</p>
-						<a
-							href="https://www.ignitionworx.seo-legacy.co.za/"
-							target="_blank"
-							rel="noopener noreferrer"
-						>
-							<i class="bx bx-link-external"></i>
-						</a>
-					</div>
-
-					<span class="animate scroll" style="--i: 2"></span>
-				</div>
-
-				<div class="portfolio-box">
-					<img src="./assets/images/ic-security-img.png" alt="" />
-					<div class="portfolio-layer">
-						<h4>IronClad Security Wordpress Website</h4>
-						<p>Created a website using wordpress CMS</p>
-						<a
-							href="https://www.icsecurity.seo-legacy.co.za/"
-							target="_blank"
-							rel="noopener noreferrer"
-						>
-							<i class="bx bx-link-external"></i>
-						</a>
-					</div>
-
-					<span class="animate scroll" style="--i: 2"></span>
-				</div>
-
-				<div class="portfolio-box">
 					<img
 						src="./assets/images/super-hero-api-app-img.png"
 						alt=""
@@ -482,6 +422,22 @@
 						</p>
 						<a
 							href="https://super-hero-app-v1.netlify.app/"
+							target="_blank"
+							rel="noopener noreferrer"
+						>
+							<i class="bx bx-link-external"></i>
+						</a>
+					</div>
+
+					<span class="animate scroll" style="--i: 2"></span>
+				</div>
+				<div class="portfolio-box">
+					<img src="./assets/images/color-picker-project-img1.png" alt="" />
+					<div class="portfolio-layer">
+						<h4>Color Generator Web Application</h4>
+						<p>Created a color generator web application using HTML, CSS, and ReactJS.</p>
+						<a
+							href="https://colorgeneratorappv2.netlify.app/"
 							target="_blank"
 							rel="noopener noreferrer"
 						>
